# bmf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  llms.txt  mcflamingo-bmf-cli-0.1.0.tgz  mcflamingo-bmf-gateway-0.1.0.tgz  mcflamingo-bmf-sdk-0.1.0.tgz  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
cli/: README.md  package.json  tsconfig.json
cli/src/: bin.ts
cli/test/: smoke.mjs
core-rs/: Cargo.toml
core-rs/bmf-core/: Cargo.toml
core-rs/bmf-core/src/: capabilities.rs  ir.rs  lib.rs  mjcf.rs  policy.rs  urdf.rs
core-rs/bmf-core/tests/: fixtures.rs
core-rs/bmf-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
core-rs/bmf-node/scripts/: build.mjs  smoke.mjs
core-rs/bmf-node/src/: lib.rs
core-rs/bmf-py/: Cargo.toml
core-rs/bmf-py/src/: lib.rs
docs/: 0.2.0-day2-verdict.md  0.2.0-robotics-scope.md  HANDOFF-2.0.md  OUTREACH-LEROBOT.md  PUBLISH.md
examples/lerobot-gate/: index.mjs  package.json
examples/node-verify/: README.md  index.mjs  package.json
examples/three-js-loader/: README.md  loader.mjs  package.json
gateway/: README.md  package.json  tsconfig.json
gateway/src/: server.ts
gateway/test/: gateway.smoke.mjs
scripts/: wrap-lerobot-act-aloha-sim.sh
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: canonicalize.ts  derive.ts  hash.ts  index.ts  load.ts  native.ts  royalties.ts  signing.ts  types.ts  uri.ts
sdk/typescript/test/: policy.test.ts  robot.test.ts  sdk.test.ts
spec/: SPEC.md
spec/examples/: character.bmf.json
spec/examples/hf-mcfl-act-aloha-sim-wrap/: README.md  train_config.json
spec/examples/hf-mcfl-lerobot-fixture/: README.md  (+2 more)
spec/schema/: capabilities.registry.json  manifest.schema.json
(+10 files in other folders)
