[workspace]
resolver = "2"
members = ["bmf-core", "bmf-py", "bmf-node"]

[workspace.package]
version = "0.2.0-dev.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MCFLAMINGO/bmf"

[workspace.dependencies]
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
