[package]
name = "bmf-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for bmf-core (napi-rs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
bmf-core = { path = "../bmf-core" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
